--- a/app/src/main/res/layout/activity_term_add.xml
+++ b/app/src/main/res/layout/activity_term_add.xml
@@ -14,7 +14,7 @@
         android:text="(All terms end 6 months after start)"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/termAddDateText" />
 
     <EditText
         android:id="@+id/termAddTitleInput"
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/termAddDateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/termAddTitleInput" />
 
     <Button
-        android:id="@+id/termAddDateText"
+        android:id="@+id/termAddSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit"
