--- a/app/src/main/res/layout/activity_course_add.xml
+++ b/app/src/main/res/layout/activity_course_add.xml
@@ -7,7 +7,7 @@
     tools:context=".UI.Term.CourseAdd">
 
     <EditText
-        android:id="@+id/titleInput"
+        android:id="@+id/AssessmentTitleInput"
         android:layout_width="312dp"
         android:layout_height="48dp"
         android:layout_marginTop="48dp"
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/statusBox"
+        android:id="@+id/typeBox"
         android:layout_width="210dp"
         android:layout_height="48dp"
         android:layout_marginBottom="156dp"
@@ -37,7 +37,7 @@
         android:layout_marginBottom="368dp"
         android:text="Status"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/statusBox"
+        app:layout_constraintEnd_toStartOf="@+id/typeBox"
         app:layout_constraintHorizontal_bias="0.27"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
@@ -48,7 +48,7 @@
         android:layout_width="212dp"
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/statusBox"
+        app:layout_constraintBottom_toTopOf="@+id/typeBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.572"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
         android:layout_marginTop="36dp"
         android:text="Start Date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleInput" />
+        app:layout_constraintTop_toBottomOf="@+id/AssessmentTitleInput" />
 
     <TextView
         android:id="@+id/textView5"
@@ -88,7 +88,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/noteInput"
+        android:id="@+id/assessmentDescriptionInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -112,7 +112,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/statusBox"
+        app:layout_constraintTop_toBottomOf="@+id/typeBox"
         app:layout_constraintVertical_bias="0.433" />
 
     <TextView
@@ -124,7 +124,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/titleInput" />
+        app:layout_constraintTop_toBottomOf="@+id/AssessmentTitleInput" />
 
     <TextView
         android:id="@+id/textView9"
@@ -148,13 +148,13 @@
         app:layout_constraintTop_toBottomOf="@+id/startDate" />
 
     <Button
-        android:id="@+id/submitButton"
+        android:id="@+id/assessmentSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/noteInput" />
+        app:layout_constraintTop_toBottomOf="@+id/assessmentDescriptionInput" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
