set titles on actionbars

--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -73,26 +73,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/courseDetailTitle" />
 
-    <Button
-        android:id="@+id/courseDetailModifyButton"
-        android:layout_width="163dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="24dp"
-        android:text="Modify Course"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/courseNoteDetail" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="56dp"
         android:text="Assess For This Course"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/courseDetailModifyButton" />
+        app:layout_constraintTop_toBottomOf="@+id/courseNoteDetail" />
 
     <TextView
         android:id="@+id/courseNoteDetail"
@@ -153,11 +143,10 @@
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Course Notes:"
-        app:layout_constraintBottom_toTopOf="@+id/courseDetailModifyButton"
         app:layout_constraintEnd_toStartOf="@+id/courseNoteDetail"
         app:layout_constraintHorizontal_bias="0.114"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        app:layout_constraintVertical_bias="0.456" />
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
 </androidx.constraintlayout.widget.ConstraintLayout>
