--- a/app/src/main/res/layout/activity_term_modify.xml
+++ b/app/src/main/res/layout/activity_term_modify.xml
@@ -5,15 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.Term.TermModify">
+
+    <TextView
+        android:id="@+id/termModDateEnd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="End Date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/termModifyDateText" />
+
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
         android:text="(All terms end 6 months after start)"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/termModifyDateText" />
+        app:layout_constraintTop_toBottomOf="@+id/termModDateEnd" />
 
     <EditText
         android:id="@+id/termModifyTitleInput"
