--- a/app/src/main/res/layout-land/activity_course_modify.backup.xml
+++ b/app/src/main/res/layout-land/activity_course_modify.backup.xml
@@ -69,10 +69,10 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="180dp"
         android:text="Instructor"
         app:layout_constraintEnd_toStartOf="@+id/courseModInstructorBox"
-        app:layout_constraintHorizontal_bias="0.377"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -147,7 +147,7 @@
         app:layout_constraintTop_toBottomOf="@+id/courseModStartDate" />
 
     <Button
-        android:id="@+id/assessmentSubmit"
+        android:id="@+id/assessmentModSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit"
