--- a/app/src/main/res/layout/activity_assessment_add.xml
+++ b/app/src/main/res/layout/activity_assessment_add.xml
@@ -14,10 +14,10 @@
         android:text="StartDate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/assessmentDateButton" />
+        app:layout_constraintTop_toBottomOf="@+id/assessmentModDateButton" />
 
     <Button
-        android:id="@+id/assessmentDateButton"
+        android:id="@+id/assessmentModDateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -34,10 +34,10 @@
         android:text="Choose a Date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/assessmentTypeBox" />
+        app:layout_constraintTop_toBottomOf="@+id/assessmentModTypeBox" />
 
     <EditText
-        android:id="@+id/assessmentTitleInput"
+        android:id="@+id/assessmentModTitleInput"
         android:layout_width="312dp"
         android:layout_height="48dp"
         android:layout_marginTop="48dp"
@@ -50,13 +50,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/assessmentTypeBox"
+        android:id="@+id/assessmentModTypeBox"
         android:layout_width="210dp"
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/assessmentDescriptionInput"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentModDescriptionInput"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
@@ -66,13 +66,13 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="72dp"
         android:text="Type"
-        app:layout_constraintEnd_toStartOf="@+id/assessmentTypeBox"
+        app:layout_constraintEnd_toStartOf="@+id/assessmentModTypeBox"
         app:layout_constraintHorizontal_bias="0.942"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/assessmentDescriptionInput" />
+        app:layout_constraintTop_toBottomOf="@+id/assessmentModDescriptionInput" />
 
     <EditText
-        android:id="@+id/assessmentDescriptionInput"
+        android:id="@+id/assessmentModDescriptionInput"
         android:layout_width="313dp"
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
@@ -83,11 +83,11 @@
         android:text="Description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/assessmentTitleInput"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentModTitleInput"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/assessmentSubmit"
+        android:id="@+id/assessmentModSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit"
