--- a/app/src/main/res/layout-land/activity_assessment_add.xml
+++ b/app/src/main/res/layout-land/activity_assessment_add.xml
@@ -26,10 +26,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.76"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/endDateLabel" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/endDateLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
