--- a/app/src/main/res/layout-land/activity_course_add.xml
+++ b/app/src/main/res/layout-land/activity_course_add.xml
@@ -6,137 +6,177 @@
     android:layout_height="match_parent"
     tools:context=".UI.Term.CourseAdd">
 
-    <EditText
-        android:id="@+id/courseAddTitleInput"
-        android:layout_width="312dp"
+    <TextView
+        android:id="@+id/startTextMod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="@+id/startButtonMod"
+        app:layout_constraintTop_toBottomOf="@+id/startButtonMod" />
+
+    <TextView
+        android:id="@+id/endTextMod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@+id/endButtonMod"
+        app:layout_constraintTop_toBottomOf="@+id/endButtonMod" />
+
+    <TextView
+        android:id="@+id/courseTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="Course Title"
+        app:layout_constraintStart_toStartOf="@+id/courseAddTitleInputMod"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/endButtonMod"
+        android:layout_width="155dp"
         android:layout_height="48dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:text="Choose End"
+        app:layout_constraintStart_toEndOf="@+id/startButtonMod"
+        app:layout_constraintTop_toBottomOf="@+id/typeBoxMod" />
+
+    <EditText
+        android:id="@+id/iEmailTextMod"
+        android:layout_width="170dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="5dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Title"
-        app:layout_constraintStart_toStartOf="parent"
+        android:minHeight="48dp"
+        android:text="instructor email"
+        app:layout_constraintStart_toEndOf="@+id/typeBoxMod"
+        app:layout_constraintTop_toBottomOf="@+id/instructorEmail" />
+
+    <TextView
+        android:id="@+id/instructorEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="146dp"
+        android:layout_marginTop="4dp"
+        android:text="Instructor Email"
+        app:layout_constraintStart_toEndOf="@+id/status"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/instructorName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Start Date"
-        app:layout_constraintStart_toStartOf="@+id/courseAddTitleInput"
-        app:layout_constraintTop_toBottomOf="@+id/courseAddTitleInput" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="63dp"
-        android:layout_height="18dp"
-        android:layout_marginTop="16dp"
-        android:text="End Date"
-        app:layout_constraintStart_toStartOf="@+id/courseAddTitleInput"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:text="Status"
-        app:layout_constraintStart_toStartOf="@+id/courseAddTitleInput"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <TextView
-        android:id="@+id/courseAddEndDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/courseAddStartDate"
-        app:layout_constraintTop_toBottomOf="@+id/courseAddStartDate" />
-
-    <TextView
-        android:id="@+id/courseAddStartDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/courseAddTitleInput" />
-
-    <Spinner
-        android:id="@+id/instructorBox"
-        android:layout_width="212dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="@+id/courseAddStartDate"
-        app:layout_constraintTop_toBottomOf="@+id/courseAddEndDate"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <Spinner
-        android:id="@+id/typeBox"
-        android:layout_width="210dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintStart_toStartOf="@+id/courseAddStartDate"
-        app:layout_constraintTop_toBottomOf="@+id/instructorBox"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Instructor"
-        app:layout_constraintStart_toStartOf="@+id/courseAddTitleInput"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Notes (Optional)"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.818"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/courseAddTitleInput"
-        app:layout_constraintVertical_bias="0.086" />
+        android:layout_marginTop="12dp"
+        android:text="Instructor Name"
+        app:layout_constraintStart_toStartOf="@+id/iNameTextMod"
+        app:layout_constraintTop_toBottomOf="@+id/courseAddTitleInputMod" />
 
     <EditText
-        android:id="@+id/courseAddNoteInput"
+        android:id="@+id/iPhoneTextMod"
+        android:layout_width="171dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="number"
+        android:minHeight="48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/instructorPhone"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Spinner
+        android:id="@+id/typeBoxMod"
+        android:layout_width="171dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="@+id/startButtonMod"
+        app:layout_constraintTop_toBottomOf="@+id/status"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/startButtonMod"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="4dp"
+        android:text="Choose Start"
+        app:layout_constraintStart_toStartOf="@+id/notes"
+        app:layout_constraintTop_toBottomOf="@+id/typeBoxMod" />
+
+    <TextView
+        android:id="@+id/instructorPhone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="Instructor Phone"
+        app:layout_constraintStart_toStartOf="@+id/iPhoneTextMod"
+        app:layout_constraintTop_toBottomOf="@+id/iNameTextMod" />
+
+    <TextView
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="Status"
+        app:layout_constraintStart_toStartOf="@+id/typeBoxMod"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/iNameTextMod"
+        android:layout_width="173dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:text="instructor name"
+        app:layout_constraintStart_toStartOf="@+id/instructorPhone"
+        app:layout_constraintTop_toBottomOf="@+id/instructorName" />
+
+    <TextView
+        android:id="@+id/notes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Notes (Optional)"
+        app:layout_constraintStart_toStartOf="@+id/courseAddNoteInputMod"
+        app:layout_constraintTop_toBottomOf="@+id/startTextMod" />
+
+    <EditText
+        android:id="@+id/courseAddNoteInputMod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
         android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.892"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/iPhoneTextMod"
+        app:layout_constraintTop_toBottomOf="@+id/notes"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <TextView
-        android:id="@+id/textView7"
+    <Button
+        android:id="@+id/courseAddSubmitMod"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reminder : Courses are for the full term. "
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.923" />
-
-    <Button
-        android:id="@+id/courseAddSubmit"
-        android:layout_width="210dp"
-        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
         android:text="Submit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/courseAddNoteInput"
-        app:layout_constraintTop_toBottomOf="@+id/courseAddNoteInput" />
+        app:layout_constraintStart_toEndOf="@+id/courseAddNoteInputMod"
+        app:layout_constraintTop_toBottomOf="@+id/endTextMod" />
+
+    <EditText
+        android:id="@+id/courseAddTitleInputMod"
+        android:layout_width="173dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Title"
+        app:layout_constraintStart_toStartOf="@+id/instructorName"
+        app:layout_constraintTop_toBottomOf="@+id/courseTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
