--- a/app/src/main/res/layout-land/activity_course_modify.xml
+++ b/app/src/main/res/layout-land/activity_course_modify.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/typeBox"
+        android:id="@+id/typeBoxMod"
         android:layout_width="210dp"
         android:layout_height="48dp"
         android:layout_marginBottom="156dp"
@@ -36,7 +36,7 @@
         android:layout_marginBottom="368dp"
         android:text="Status"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/typeBox"
+        app:layout_constraintEnd_toStartOf="@+id/typeBoxMod"
         app:layout_constraintHorizontal_bias="0.27"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
@@ -47,7 +47,7 @@
         android:layout_width="212dp"
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/typeBox"
+        app:layout_constraintBottom_toTopOf="@+id/typeBoxMod"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.572"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +111,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/typeBox"
+        app:layout_constraintTop_toBottomOf="@+id/typeBoxMod"
         app:layout_constraintVertical_bias="0.433" />
 
     <TextView
