--- a/app/src/main/res/layout/activity_assessment_add.xml
+++ b/app/src/main/res/layout/activity_assessment_add.xml
@@ -24,10 +24,10 @@
         android:text="Choose Date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/endDateLabel" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/endDateLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
