--- a/app/src/main/res/layout/activity_course_modify.xml
+++ b/app/src/main/res/layout/activity_course_modify.xml
@@ -5,154 +5,201 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.Term.CourseModify">
+
     <EditText
-        android:id="@+id/courseModTitleInput"
-        android:layout_width="312dp"
+        android:id="@+id/courseAddTitleInputMod"
+        android:layout_width="173dp"
         android:layout_height="48dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="3dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView21"
+        app:layout_constraintTop_toBottomOf="@+id/textView21" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="98dp"
+        android:layout_marginTop="80dp"
+        android:text="Start Date"
+        app:layout_constraintStart_toEndOf="@+id/textView21"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Spinner
-        android:id="@+id/typeBox"
-        android:layout_width="210dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="156dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="154dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="154dp"
+        android:text="Notes (Optional)"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/typeBoxMod" />
+
+    <Button
+        android:id="@+id/courseAddSubmitMod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="44dp"
+        android:text="Submit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/courseAddNoteInputMod" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="63dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="63dp"
+        android:text="End Date"
+        app:layout_constraintStart_toStartOf="@+id/startTextMod"
+        app:layout_constraintTop_toBottomOf="@+id/startTextMod" />
+
+    <EditText
+        android:id="@+id/iNameTextMod"
+        android:layout_width="173dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="9dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:text="instructor name"
+        app:layout_constraintStart_toStartOf="@+id/textView18"
+        app:layout_constraintTop_toBottomOf="@+id/textView18" />
+
+    <EditText
+        android:id="@+id/iEmailTextMod"
+        android:layout_width="170dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="7dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:text="instructor email"
+        app:layout_constraintStart_toStartOf="@+id/textView20"
+        app:layout_constraintTop_toBottomOf="@+id/textView20" />
+
+    <Spinner
+        android:id="@+id/typeBoxMod"
+        android:layout_width="171dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="368dp"
+        android:layout_marginTop="17dp"
         android:text="Status"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/typeBox"
-        app:layout_constraintHorizontal_bias="0.27"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="@+id/iEmailTextMod"
+        app:layout_constraintTop_toBottomOf="@+id/iEmailTextMod" />
 
-    <Spinner
-        android:id="@+id/courseModInstructorBox"
-        android:layout_width="212dp"
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:text="Instructor Phone"
+        app:layout_constraintStart_toStartOf="@+id/iNameTextMod"
+        app:layout_constraintTop_toBottomOf="@+id/iNameTextMod" />
+
+    <EditText
+        android:id="@+id/iPhoneTextMod"
+        android:layout_width="171dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/typeBox"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.572"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/courseModEndDate"
-        app:layout_constraintVertical_bias="0.12"
+        android:layout_marginTop="9dp"
+        android:ems="10"
+        android:inputType="number|phone"
+        android:minHeight="48dp"
+        app:layout_constraintStart_toStartOf="@+id/textView19"
+        app:layout_constraintTop_toBottomOf="@+id/textView19"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="36dp"
-        android:text="Start Date"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/courseModTitleInput" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Instructor"
-        app:layout_constraintEnd_toStartOf="@+id/courseModInstructorBox"
-        app:layout_constraintHorizontal_bias="0.377"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="188dp"
-        android:text="Notes (Optional)"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="12dp"
+        android:text="Instructor Email"
+        app:layout_constraintStart_toStartOf="@+id/iPhoneTextMod"
+        app:layout_constraintTop_toBottomOf="@+id/iPhoneTextMod" />
 
     <EditText
-        android:id="@+id/courseModNoteInput"
+        android:id="@+id/courseAddNoteInputMod"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="101dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="100dp"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
         android:minHeight="48dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.342"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="108dp"
-        android:text="Reminder : Courses are for the full term. "
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
+        android:text="Instructor Name"
+        app:layout_constraintStart_toStartOf="@+id/courseAddTitleInputMod"
+        app:layout_constraintTop_toBottomOf="@+id/courseAddTitleInputMod" />
+
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="80dp"
+        android:text="Course Title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/typeBox"
-        app:layout_constraintVertical_bias="0.433" />
-
-    <TextView
-        android:id="@+id/courseModStartDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.107"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/courseModTitleInput" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="63dp"
-        android:layout_height="18dp"
-        android:layout_marginTop="36dp"
-        android:text="End Date"
-        app:layout_constraintEnd_toStartOf="@+id/courseModEndDate"
-        app:layout_constraintHorizontal_bias="0.392"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/courseModStartDate" />
-
-    <TextView
-        android:id="@+id/courseModEndDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="240dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/courseModStartDate" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/assessmentModSubmit"
+        android:id="@+id/startButtonMod"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/courseModNoteInput" />
+        android:layout_marginTop="3dp"
+        android:text="Choose Start"
+        app:layout_constraintStart_toStartOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+    <Button
+        android:id="@+id/endButtonMod"
+        android:layout_width="155dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="9dp"
+        android:text="Choose End"
+        app:layout_constraintStart_toStartOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <TextView
+        android:id="@+id/startTextMod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        app:layout_constraintStart_toStartOf="@+id/startButtonMod"
+        app:layout_constraintTop_toBottomOf="@+id/startButtonMod" />
+
+    <TextView
+        android:id="@+id/endTextMod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@+id/endButtonMod"
+        app:layout_constraintTop_toBottomOf="@+id/endButtonMod" />
 </androidx.constraintlayout.widget.ConstraintLayout>
